force-app/main/default/objects/Project__c/fields/Billing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Billing_Terms__c</fullName>
    <label>Billing Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Net 30</fullName><default>false</default></value>
            <value><fullName>Net 45</fullName><default>true</default></value>
            <value><fullName>Net 60</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>