force-app/main/default/objects/Project__c/fields/CO_Total__c.field-meta.xml
<CustomField>
    <fullName>CO_Total__c</fullName>
    <label>Change Order Total</label>
    <summarizedField>Change_Order__c.CO_Amount__c</summarizedField>
    <summaryForeignKey>Change_Order__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>