force-app/main/default/objects/Project__c/fields/Days_Since_Last_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Invoice__c</fullName>
    <label>Days Since Last Invoice</label>
    <formula>IF(ISBLANK(Last_Invoice_Date__c), null, TODAY() - Last_Invoice_Date__c)</formula>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>