force-app/main/default/objects/Project__c/fields/Days_To_Mobilization__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Mobilization__c</fullName>
    <label>Days to Mobilization</label>
    <formula>IF(ISBLANK(Mobilization_Date__c), null, Mobilization_Date__c - TODAY())</formula>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>