force-app/main/default/objects/Project__c/fields/Estimated_Biweekly_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Biweekly_Labor_Cost__c</fullName>
    <label>Estimated Biweekly Labor Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>