force-app/main/default/objects/Project__c/fields/Estimated_Project_Length__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Length__c</fullName>
    <label>Estimated Project Length (Weeks)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>