force-app/main/default/objects/Project__c/fields/Has_Missing_PO_Data__c.field-meta.xml
<CustomField>
    <fullName>Has_Missing_PO_Data__c</fullName>
    <label>Missing PO Data</label>
    <formula>OR(ISBLANK(PO_Number__c), ISBLANK(PO_Amount__c), PO_Amount__c = 0, ISBLANK(Mobilization_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>