force-app/main/default/objects/Project__c/fields/Method_of_Mobilization__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Mobilization__c</fullName>
    <label>Method of Mobilization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Drive</fullName><default>true</default></value>
            <value><fullName>Fly</fullName><default>false</default></value>
            <value><fullName>Mixed</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>