force-app/main/default/objects/Project__c/fields/Mobilization_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobilization_Date__c</fullName>
    <label>Mobilization Date</label>
    <type>Date</type>
</CustomField>