force-app/main/default/objects/Project__c/fields/Percent_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Percent_Remaining__c</fullName>
    <label>Percent Remaining</label>
    <formula>IF((NULLVALUE(PO_Amount__c, 0) + NULLVALUE(CO_Total__c, 0)) = 0, 0, (Remaining_Balance__c / (NULLVALUE(PO_Amount__c, 0) + NULLVALUE(CO_Total__c, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>