force-app/main/default/objects/Project__c/fields/PO_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>PO_Alert_Sent__c</fullName>
    <label>PO Alert Sent</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>