force-app/main/default/objects/Project__c/fields/PO_Alert_Threshold__c.field-meta.xml
<CustomField>
    <fullName>PO_Alert_Threshold__c</fullName>
    <label>PO Alert Threshold</label>
    <inlineHelpText>Alert fires when Percent Remaining falls below this value. Percent remaining, e.g. enter 25 for 25%. NOTE: the field default is a decimal fraction per Salesforce Percent-field rules (0.25 renders as 25%).</inlineHelpText>
    <defaultValue>0.25</defaultValue>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>