force-app/main/default/objects/Project__c/fields/Pre_Mob_Timeline_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Pre_Mob_Timeline_Ratio__c</fullName>
    <description>Multiplier applied to Pre-Mob task lead times based on how far Mobilization Date is from today. 1.0 = standard 14-day window; 0.5 = compressed (7 days out); 3.0 = expanded (42 days out). Floors at 0.1 for edge cases.</description>
    <formula>MAX(0.1, (Mobilization_Date__c - TODAY()) / 14)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Mob Timeline Ratio</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>