force-app/main/default/objects/Project__c/fields/Project_Lead__c.field-meta.xml
<CustomField>
    <fullName>Project_Lead__c</fullName>
    <label>Project Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Orders (Project Lead)</relationshipLabel>
    <relationshipName>Work_Orders_Led</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>