force-app/main/default/objects/Project__c/fields/Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance__c</fullName>
    <label>Remaining Balance</label>
    <formula>(NULLVALUE(PO_Amount__c, 0) + NULLVALUE(CO_Total__c, 0)) - NULLVALUE(Invoiced_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>