force-app/main/default/objects/Project__c/fields/Requires_New_Hires__c.field-meta.xml
<CustomField>
    <fullName>Requires_New_Hires__c</fullName>
    <label>Requires New Hires</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>