force-app/main/default/objects/Project__c/fields/Requires_Travel__c.field-meta.xml
<CustomField>
    <fullName>Requires_Travel__c</fullName>
    <label>Requires Travel</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>