force-app/main/default/objects/Project__c/fields/SOW_Notes__c.field-meta.xml
<CustomField>
    <fullName>SOW_Notes__c</fullName>
    <label>Scope of Work Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>