force-app/main/default/objects/Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pre-Mob</fullName><default>true</default></value>
            <value><fullName>Executing</fullName><default>false</default></value>
            <value><fullName>Demob</fullName><default>false</default></value>
            <value><fullName>Closed</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>