force-app/main/default/objects/Project__c/fields/Tech_1_ST_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tech_1_ST_Rate__c</fullName>
    <label>Tech 1 Rate - ST (Standard)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>