force-app/main/default/objects/Project__c/fields/Tech_2_OT_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tech_2_OT_Rate__c</fullName>
    <label>Tech 2 Rate - OT (Lead)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>