force-app/main/default/objects/Project__c/fields/Tooling_Equipment_Budget__c.field-meta.xml
<CustomField>
    <fullName>Tooling_Equipment_Budget__c</fullName>
    <label>Tooling / Equipment Budget</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>