force-app/main/default/objects/Project__c/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <label>Total Contract Value</label>
    <formula>NULLVALUE(PO_Amount__c, 0) + NULLVALUE(CO_Total__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>