force-app/main/default/objects/Project__c/listViews/All_Active_Work_Orders.listView-meta.xml
<ListView>
    <fullName>All_Active_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Stage__c</columns>
    <columns>Mobilization_Date__c</columns>
    <columns>PO_Amount__c</columns>
    <columns>Remaining_Balance__c</columns>
    <columns>Percent_Remaining__c</columns>
    <columns>Project_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Active Work Orders</label>
</ListView>