force-app/main/default/objects/Project__c/listViews/All_Work_Orders.listView-meta.xml
<ListView>
    <fullName>All_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Stage__c</columns>
    <columns>Mobilization_Date__c</columns>
    <columns>PO_Amount__c</columns>
    <columns>Project_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
</ListView>